--- a/lab02/continuewatch/app/src/main/res/values/strings.xml
+++ b/lab02/continuewatch/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Continue Watch</string>
+    <string name="seconds_elapsed">Seconds elapsed: %1$d</string>
 </resources>
